@@ -1,5 +1,6 @@
 # -*- coding: utf-8 -*-
 
+from json import dumps as jsdumps, loads as jsloads
 import sys
 import xbmc
 
@@ -23,5 +24,15 @@ if __name__ == '__main__':
 	tvdb = params.get('tvdb', '')
 	tvshowtitle = params.get('tvshowtitle', '')
 	systvshowtitle = quote_plus(tvshowtitle)
+	meta = jsloads(params['meta'])
+	art = {}
+	art['fanart'] = meta.get('fanart')
+	art['icon'] = meta.get('icon')
+	art['thumb'] = meta.get('thumb')
+	art['banner'] = meta.get('banner')
+	art['clearlogo'] = meta.get('clearlogo')
+	art['clearart'] = meta.get('clearart')
+	art['landscape'] = meta.get('landscape')
+	sysart = quote_plus(jsdumps(art))
 
-	xbmc.executebuiltin('ActivateWindow(Videos,plugin://plugin.video.venom/?action=seasons&tvshowtitle=%s&year=%s&imdb=%s&tmdb=%s&tvdb=%s,return)' % (systvshowtitle, year, imdb, tmdb, tvdb))
+	xbmc.executebuiltin('ActivateWindow(Videos,plugin://plugin.video.venom/?action=seasons&tvshowtitle=%s&year=%s&imdb=%s&tmdb=%s&tvdb=%s&art=%s,return)' % (systvshowtitle, year, imdb, tmdb, tvdb, sysart))
