@@ -1,3 +1,7 @@
+[B][COLOR red]Update - v1.1.3 - April 18, 2021[/COLOR][/B]
+[COLOR yellow]--[/COLOR][I] Update for compatibility with plugin.video.venom TVShow meta provider
+    change from TVDb to TMDb.[/I]
+
 [B][COLOR red]Update - v1.1.2 - March 10, 2021[/COLOR][/B]
 [COLOR yellow]--[/COLOR][I] Change method of determining bookmarks to use "ListItem.IsResumable".[/I]
 
